Added Heath Component

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -759,6 +759,42 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+BP_Projectile_C.Tick=True
+BP_Projectile_C.Projectile=True
+BP_Projectile_C.ComponentTick=True
+BP_Projectile_C.ProjectileBounces=True
+BP_Projectile_C.ProjectileSimulation=True
+BP_Projectile_C.Homing=True
+BP_Projectile_C.ProjectileInterpolation=True
+BP_Projectile_C.Velocity=True
+BP_Projectile_C.PlanarMovement=True
+BP_Projectile_C.MovementComponent=True
+BP_Projectile_C.Tags=True
+BP_Projectile_C.ComponentReplication=True
+BP_Projectile_C.Activation=True
+BP_Projectile_C.Variable=True
+BP_Projectile_C.Collision=True
+BP_Projectile_C.Cooking=True
+BP_Projectile_C.Replication=True
+BP_Projectile_C.Rendering=True
+BP_Projectile_C.Actor=True
+BP_Projectile_C.Input=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -791,13 +827,14 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem1=/Game/Assets/Actors/NewBlueprint
-MRUItem2=/Game/Assets/Blueprints/MyGameMode
-MRUItem3=/Game/Assets/Actors/MyTankPawn
-MRUItem4=/Game/Assets/Meshes/MyTankPawn
-MRUItem5=/Game/Assets/Meshes/NewBlueprint
-MRUItem6=/Game/Assets/Maps/Main
+MRUItem0=/Game/Assets/Actors/BP_Projectile
+MRUItem1=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem2=/Game/Assets/Actors/NewBlueprint
+MRUItem3=/Game/Assets/Blueprints/MyGameMode
+MRUItem4=/Game/Assets/Actors/MyTankPawn
+MRUItem5=/Game/Assets/Meshes/MyTankPawn
+MRUItem6=/Game/Assets/Meshes/NewBlueprint
+MRUItem7=/Game/Assets/Maps/Main
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1774,7 +1811,7 @@ MovieSceneCapture.TimeStamp=2021.11.29-20.43.00
 MovieSceneCapture.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2021.11.29-20.42.59
 ExternalImagePicker.LastCompileMethod=Unknown
-MyProject.TimeStamp=2022.05.12-22.53.28
+MyProject.TimeStamp=2022.05.13-01.54.22
 MyProject.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2021.11.29-20.42.56
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1829,7 +1866,7 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 MyTankPawn_C=MyTankPawn_C.Collision.Collision,
-CapsuleComponent=MyTankPawn_C.Collision.Collision,
+CapsuleComponent=
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.Fire,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.Turn,IOSRuntimeSettings.Build.Remote Build Options,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.Fire,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.Turn,IOSRuntimeSettings.Build.Remote Build Options,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.Fire,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.Turn,IOSRuntimeSettings.Build.Remote Build Options,
@@ -1947,6 +1984,7 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 
 [AssetEditorToolkitTabLocation]
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=0
+/Game/Assets/Actors/BP_Projectile.BP_Projectile=0
 
 [MaterialEditor]
 PrimType=1
