--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -795,6 +795,15 @@ BP_Projectile_C.Replication=True
 BP_Projectile_C.Rendering=True
 BP_Projectile_C.Actor=True
 BP_Projectile_C.Input=True
+HealthComponent.Variable=True
+HealthComponent.Sockets=True
+HealthComponent.HealthComponent=True
+HealthComponent.Tags=True
+HealthComponent.ComponentTick=True
+HealthComponent.ComponentReplication=True
+HealthComponent.Activation=True
+HealthComponent.Cooking=True
+HealthComponent.Events=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1811,7 +1820,7 @@ MovieSceneCapture.TimeStamp=2021.11.29-20.43.00
 MovieSceneCapture.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2021.11.29-20.42.59
 ExternalImagePicker.LastCompileMethod=Unknown
-MyProject.TimeStamp=2022.05.13-01.54.22
+MyProject.TimeStamp=2022.05.13-02.27.49
 MyProject.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2021.11.29-20.42.56
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1866,7 +1875,7 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 MyTankPawn_C=MyTankPawn_C.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=MyTankPawn_C.Collision.Collision,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.Fire,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.Turn,IOSRuntimeSettings.Build.Remote Build Options,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.Fire,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.Turn,IOSRuntimeSettings.Build.Remote Build Options,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.Fire,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.Turn,IOSRuntimeSettings.Build.Remote Build Options,
