--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,8 +75,8 @@ LastExecutedLaunchName=DESKTOP-4K5K03J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1286
-NewWindowHeight=744
+NewWindowWidth=1288
+NewWindowHeight=752
 MultipleInstancePositions=(X=320,Y=155)
 
 [MRU]
@@ -165,7 +165,7 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.TiltRight,InputSettings
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.TiltRight,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.TiltForward,
 BP_Maze_C=BP_Maze_C.Rendering.RayTracing,
 SceneComponent=BP_Maze_C.Rendering.RayTracing,
-StaticMeshComponent=BP_Maze_C.Rendering.RayTracing,
+StaticMeshComponent=
 K2Node_VariableGet=
 ChildActorComponent=
 BP_Ball_C=BP_Maze_C.Rendering.RayTracing,
@@ -180,6 +180,9 @@ OpenAssetsAtExit=/Game/Blueprints/BP_Ball.BP_Ball
 OpenAssetsAtExit=/Game/Meshes/SM_Mesh.SM_Mesh
 OpenAssetsAtExit=/Game/Blueprints/BP_Goal.BP_Goal
 OpenAssetsAtExit=/Game/HUD/WBP_Win.WBP_Win
+OpenAssetsAtExit=/Game/Blueprints/BP_GameMode.BP_GameMode
+OpenAssetsAtExit=/Game/HUD/WBP_Start.WBP_Start
+OpenAssetsAtExit=/Game/Maps/Start.Start:PersistentLevel.Start
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -656,6 +659,30 @@ BP_GameMode_C.Tick=True
 BP_GameMode_C.Classes=True
 BP_GameMode_C.Game=True
 BP_GameMode_C.GameMode=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+Start_C.Tick=True
+Start_C.Replication=True
+Start_C.Actor=True
+Start_C.Input=True
+BP_PlayerController_C.PlayerController=True
+BP_PlayerController_C.Tick=True
+BP_PlayerController_C.Cheat Manager=True
+BP_PlayerController_C.MouseInterface=True
+BP_PlayerController_C.Game=True
+BP_PlayerController_C.Controller=True
+BP_PlayerController_C.Replication=True
+BP_PlayerController_C.Actor=True
+BP_PlayerController_C.Input=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -677,6 +704,7 @@ StaticMeshComponent.Collision=True
 BP_Ball_C.Actor=True
 EdGraph.Graph=True
 TextBlock.Appearance=True
+GameMapsSettings.DefaultMaps=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -689,20 +717,24 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [ModuleFileTracking]
-MyProject.TimeStamp=2022.06.09-22.10.58
+MyProject.TimeStamp=2022.06.10-11.09.44
 MyProject.LastCompileMethod=Runtime
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Start
-MRUItem1=/Game/Blueprints/BP_GameMode
-MRUItem2=/Game/Blueprints/BP_Maze
-MRUItem3=/Game/HUD/WBP_Win
-MRUItem4=/Game/Materials/M_Goal
-MRUItem5=/Game/Blueprints/BP_Goal
-MRUItem6=/Game/Meshes/SM_Mesh
-MRUItem7=/Game/Blueprints/BP_Ball
+MRUItem0=/Game/Blueprints/BP_PlayerController
+MRUItem1=/Game/HUD/WBP_Start
+MRUItem2=/Game/Maps/Start
+MRUItem3=/Game/Blueprints/BP_GameMode
+MRUItem4=/Game/Blueprints/BP_Maze
+MRUItem5=/Game/HUD/WBP_Win
+MRUItem6=/Game/Materials/M_Goal
+MRUItem7=/Game/Blueprints/BP_Goal
+MRUItem8=/Game/Meshes/SM_Mesh
+MRUItem9=/Game/Blueprints/BP_Ball
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
@@ -758,6 +790,19 @@ NodeTemplateCacheCapMB=20.000000
 bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
 
 [MaterialEditor]
 PrimType=1
