Added start level

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -80,8 +80,8 @@ NewWindowHeight=752
 MultipleInstancePositions=(X=320,Y=155)
 
 [MRU]
-MRUItem0=/Game/Maps/Start
-MRUItem1=/Game/Maps/Main
+MRUItem0=/Game/Maps/Main
+MRUItem1=/Game/Maps/Start
 MRUItem2=/Game/Main
 
 [DetailCustomWidgetExpansion]
@@ -169,9 +169,10 @@ StaticMeshComponent=
 K2Node_VariableGet=
 ChildActorComponent=
 BP_Ball_C=BP_Maze_C.Rendering.RayTracing,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [EditorStartup]
-LastLevel=/Game/Maps/Start
+LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -182,7 +183,7 @@ OpenAssetsAtExit=/Game/Blueprints/BP_Goal.BP_Goal
 OpenAssetsAtExit=/Game/HUD/WBP_Win.WBP_Win
 OpenAssetsAtExit=/Game/Blueprints/BP_GameMode.BP_GameMode
 OpenAssetsAtExit=/Game/HUD/WBP_Start.WBP_Start
-OpenAssetsAtExit=/Game/Maps/Start.Start:PersistentLevel.Start
+OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -725,16 +726,17 @@ MyProject.TimeStamp=2022.06.10-11.09.44
 MyProject.LastCompileMethod=Runtime
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_PlayerController
-MRUItem1=/Game/HUD/WBP_Start
-MRUItem2=/Game/Maps/Start
-MRUItem3=/Game/Blueprints/BP_GameMode
-MRUItem4=/Game/Blueprints/BP_Maze
-MRUItem5=/Game/HUD/WBP_Win
-MRUItem6=/Game/Materials/M_Goal
-MRUItem7=/Game/Blueprints/BP_Goal
-MRUItem8=/Game/Meshes/SM_Mesh
-MRUItem9=/Game/Blueprints/BP_Ball
+MRUItem0=/Game/Maps/Main
+MRUItem1=/Game/Blueprints/BP_PlayerController
+MRUItem2=/Game/HUD/WBP_Start
+MRUItem3=/Game/Maps/Start
+MRUItem4=/Game/Blueprints/BP_GameMode
+MRUItem5=/Game/Blueprints/BP_Maze
+MRUItem6=/Game/HUD/WBP_Win
+MRUItem7=/Game/Materials/M_Goal
+MRUItem8=/Game/Blueprints/BP_Goal
+MRUItem9=/Game/Meshes/SM_Mesh
+MRUItem10=/Game/Blueprints/BP_Ball
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
